# ai_tg_digest

./: .gitignore  README.md  config.example.yaml  pyproject.toml  setup.cfg  setup.py
ai_tg_digest/: cli.py  config.py  db.py  ingest.py  llm.py  moderation.py  pipeline.py  scheduler.py  utils.py
migrations/: 001_init.sql
prompts/: prompt_a_extraction.txt  prompt_b_multilabel.txt  prompt_c_summary.txt
tests/: test_utils.py
