[project]
name = "ai-tg-digest"
version = "0.1.0"
description = "Telegram AI news aggregator with moderation queue"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "PyYAML>=6.0",
  "telethon>=1.36",
  "httpx>=0.27",
  "apscheduler>=3.10",
  "typer>=0.12",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
aidigest = "ai_tg_digest.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ai_tg_digest"]
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["tests"]
